--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,12 @@
   padding-bottom: 80px; 
 }
 
+.prove01form{
+  color:black;
+  margin-left:15em;
+  margin-right: 15em;
+}
+
 .jumbotron .btn-primary {
   background: #845ac7;
   border-color: #845ac7; 
