--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -18,6 +18,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Prove Assignments<span class="caret"></span></a>
           <ul class="dropdown-menu" role="prove-menu">
             <li class="<%= path === '/prove01' ? 'active' : ''%>"><a href="/prove01">Prove01</a></li>
+            <li class="<%= path === '/prove02' ? 'active' : ''%>"><a href="/prove02">Prove02</a></li>
           </ul>
       </li>
     </ul>
