--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,6 +13,13 @@
             <li class="<%= path === '/ta04' ? 'active' : ''%>"><a href="/ta04">TA04</a></li>
           </ul>
       </li>
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Prove Assignments <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/prove01">Prove01</a></li>
+            <li><a href="/prove02">Prove02</a></li>
+          </ul>
+      </li>
     </ul>
   </div>
 </nav>
