Final revisions on prove02

--- a/views/pages/bookDisplay.ejs
+++ b/views/pages/bookDisplay.ejs
@@ -12,7 +12,7 @@
     
   </div>
 </div>
-<% if(bookList.length > 0){%>
+<!--<% if(bookList.length > 0){%>
   <% for (let book of bookList){%>
 <div class="container book">
   <h2 class="bookTitle"><%= book.bookTitle %>:</h2>
@@ -21,7 +21,7 @@
   <p><%= book.bookTitle %> was released on <%= book.releaseDate %></p>
 </div>
 <%}%>
-<%}%>
+<%}%>-->
 <div class="container book">
   <h2 class="bookTitle"><%= bookTitle %>:</h2>
   <p><%= bookDesc %></p>
