--- a/views/pages/prove02.ejs
+++ b/views/pages/prove02.ejs
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="container">
-    <form action="prove02/books" method="post">
+    <form action="/prove02/books" method="post">
         <fieldset>
             <legend>Title of a book: </legend>
             <input type="text" name="bookTitle" id="bookTitle" placeholder="Book Title">
