--- a/views/pages/ta03.ejs
+++ b/views/pages/ta03.ejs
@@ -2,29 +2,30 @@
 <html>
 
 <head>
-    <% include ../../includes/header.ejs %>
+    <% include ../includes/header.ejs %>
 </head>
 
 <body>
-    <% include ../../includes/nav.ejs %>
+    <% include ../includes/nav.ejs %>
         <div class="jumbotron text-center">
             <div class="container">
                 <h1>
                     <%= title %>
                 </h1>
                 <p>This is the placeholder for Team Activity 03</p>
-                <form action="/ta03/search" method="POST">
+                <form action="/prove08/search" method="POST">
                     <input type="text" name="tag" placeholder="tag">
                     <button type="submit">Search for tag</button>
                 </form>
                 <!-- Each object has: name, price, description, imageUrl, and an array of tags -->
                 <ul>
+                    <p><%= productList.name %></p>
                     <% for (let product of productList) { %>
                         <li>
                             <p>
                                 <%= product.name %><br>
-                                    <%= product.description %><br>
-                                        <%= product.price %>
+                                <%= product.description %><br>
+                                <%= product.price %>
                             </p>
                             <img src="<%= product.imageUrl %>" alt="<%= product.name %>"></img>
                             <p> tags: </p>
@@ -33,10 +34,10 @@
                                     <li>
                                         <%= tag %>
                                     </li>
-                                    <% } %>
+                                <% } %>
                             </ul>
                         </li>
-                        <% } %>
+                    <% } %>
                 </ul>
             </div>
         </div>
