--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,6 +18,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/prove01">Prove01</a></li>
             <li><a href="/prove02">Prove02</a></li>
+            <li><a href="/w05Class">Week 05 Class Activities</a></li>
           </ul>
       </li>
     </ul>
