--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -21,6 +21,7 @@
             <li class="<%= path === '/prove01' ? 'active' : ''%>"><a href="/prove01">Prove01</a></li>
             <li class="<%= path === '/prove02' ? 'active' : ''%>"><a href="/prove02">Prove02</a></li>
             <li class="<%= path === '/prove08' ? 'active' : ''%>"><a href="/prove08">Prove08</a></li>
+            <li class="<%= path === '/prove09' ? 'active' : ''%>"><a href="/prove09">Prove09</a></li>
             <li><a href="/w05Class">Week 05 Class Activities</a></li>
           </ul>
       </li>
