--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -49,6 +49,12 @@
   margin: auto;
   border: 2px solid white; 
 }
+
+.power{
+  margin-left: 5em;
+  list-style: none;
+
+}
 .jumbotron .lang-logo img {
   max-width: 100%; 
 }
