--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -24,6 +24,7 @@
             <li class="<%= path === '/prove09' ? 'active' : ''%>"><a href="/prove09">Prove09</a></li>
             <li class="<%= path === '/prove10' ? 'active' : ''%>"><a href="/prove10">Prove10</a></li>
             <li class="<%= path === '/prove11' ? 'active' : ''%>"><a href="/prove11">Prove11</a></li>
+            <li class="<%= path === '/prove12' ? 'active' : ''%>"><a href="/prove12">Prove12</a></li>
             <li><a href="/w05Class">Week 05 Class Activities</a></li>
           </ul>
       </li>
